[gd_scene load_steps=13 format=3 uid="uid://dkttx7hp2ycs0"]

[ext_resource type="Script" path="res://level selector/control.gd" id="1_k1eak"]
[ext_resource type="Texture2D" uid="uid://bxycrnu4ryrob" path="res://icon.svg" id="2_tf11g"]
[ext_resource type="Texture2D" uid="uid://j0usy34axpc1" path="res://Sprites/level_box_1.png" id="3_q60ex"]
[ext_resource type="Texture2D" uid="uid://d7a0k5rjuotw" path="res://Sprites/level_box_1_fonce.png" id="4_nces2"]
[ext_resource type="Texture2D" uid="uid://c1t75d2fsxr1e" path="res://Sprites/level_box_2.png" id="5_ln720"]
[ext_resource type="Texture2D" uid="uid://2wj8ge4j4r8" path="res://Sprites/level_box_2_fonce.png" id="6_d5lu5"]
[ext_resource type="Texture2D" uid="uid://coaotbv73r7r1" path="res://Sprites/level_box_3.png" id="7_tbnue"]
[ext_resource type="Texture2D" uid="uid://cenf11cdftr5m" path="res://Sprites/level_box_3_fonce.png" id="8_84n1s"]
[ext_resource type="Texture2D" uid="uid://dnwtn0dxw234s" path="res://Sprites/level_box_4.png" id="9_e2vrm"]
[ext_resource type="Texture2D" uid="uid://jbhi88m8wnva" path="res://Sprites/level_box_4_fonce.png" id="10_aub7q"]
[ext_resource type="Texture2D" uid="uid://4fa6c1s0m2rv" path="res://Sprites/level_box_5.png" id="11_l36nr"]
[ext_resource type="Texture2D" uid="uid://heq8mw3wu1ds" path="res://Sprites/level_box_5_fonce.png" id="12_1inh1"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1eak")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101813, 0.230543, 0.28611, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -79.5
offset_right = 64.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameLogo" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_tf11g")
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../RichTextLabel")
alignment = 1

[node name="level1" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
texture_normal = ExtResource("3_q60ex")
texture_pressed = ExtResource("4_nces2")
stretch_mode = 0

[node name="level2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("5_ln720")
texture_pressed = ExtResource("6_d5lu5")
stretch_mode = 0

[node name="level3" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("7_tbnue")
texture_pressed = ExtResource("8_84n1s")
stretch_mode = 0

[node name="level4" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("9_e2vrm")
texture_pressed = ExtResource("10_aub7q")
stretch_mode = 0

[node name="level5" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("11_l36nr")
texture_pressed = ExtResource("12_1inh1")
stretch_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "A game by MATELOU & co"
fit_content = true
tab_size = 6

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/level1" to="." method="goToLevel1"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/level2" to="." method="goToLevel2"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/level3" to="." method="goToLevel3"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/level4" to="." method="goToLevel4"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/level5" to="." method="goToLevel5"]
